--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
   "python-dotenv",
 ]
 
+[dependency-groups]
+dev = ["pre-commit>=4.0", "ruff>=0.11"]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
